--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/platform-server": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@ngneat/tailwind": "^7.0.3",
     "@nguniversal/express-engine": "^11.2.1",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
@@ -35,6 +36,10 @@
     "@angular/cli": "~11.2.12",
     "@angular/compiler-cli": "~11.2.13",
     "@nguniversal/builders": "^11.2.1",
+    "@tailwindcss/aspect-ratio": "0.2.1",
+    "@tailwindcss/forms": "0.3.3",
+    "@tailwindcss/line-clamp": "0.2.1",
+    "@tailwindcss/typography": "0.4.1",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
@@ -47,6 +52,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "tailwindcss": "2.1.4",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
