--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nguniversal/express-engine": "^11.2.1",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
+    "swiper": "^6.7.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
