--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/platform-server": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ngneat/tailwind": "^7.0.3",
     "@nguniversal/express-engine": "^11.2.1",
     "express": "^4.15.2",
